[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-ideogram-v3"
version = "0.1.0"
description = "Ideogram V3 image generation client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "ideogram-v3", "text-to-image", "edit-image", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/ideogram-v3"
Documentation = "https://runapi.ai/docs#sdk-ideogram-v3"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { path = "../runapi-core", editable = true }

[dependency-groups]
dev = ["pytest>=8"]
