[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-ideogram-v3"
version = "0.2.0"
description = "RunAPI Ideogram V3 SDK for text-to-image, image remix, reframe, and edit workflows in JavaScript, Python, Ruby, Go, Java, and PHP"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "runapi-ai", "ideogram-v3", "api", "sdk", "typescript", "python", "ruby", "golang", "java", "maven", "gradle", "image-generation", "text-to-image", "image-api", "ideogram-api"]
dependencies = ["runapi-core>=0.3.0"]

[project.urls]
Homepage = "https://runapi.ai/models/ideogram-v3"
Documentation = "https://runapi.ai/docs#sdk-ideogram-v3"
Source = "https://github.com/runapi-ai/ideogram-v3-sdk"
Issues = "https://github.com/runapi-ai/ideogram-v3-sdk/issues"
Changelog = "https://github.com/runapi-ai/ideogram-v3-sdk/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/runapi-ai/ideogram-v3-sdk/releases/tag/python%2Fv0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "ideogram-v3"
